css/styles.css
/* TODO em factor should be taken into account in all em-based calculations */

/* vars */
:root {
    /* typography */
    --primary-font-family: "Georgia";
    --secondary-font-family: "Verdana";
    --primary-font-color: #333;
    --secondary-font-color: #000;
    --meta-font-size: 0.75em;

    /* color palette */
    --primary-color: #007997;
    --secondary-color: #97002b;

    /* partially typography based layout */
    --common-padding: 10px;
    --min-width: 360px;
    --optimal-line-width: calc((1em/2.2) * 70); /* roughtly estimating width on optimal number of characters per line */
}

/* styles */

body {
    font-family: var(--primary-font-family);
    color: var(--primary-font-color);
    margin: 0;
    padding: 0;
}

a {
    font-family: var( --secondary-font-family);
    text-decoration: none;
}

    a:hover {
        text-decoration: underline;
    }

p {
    line-height: 1.4em;
}


.h1 {
    color: var(--secondary-font-color);
    font-size: 2em;
    font-weight: normal;   
    margin: 1.5em 0 0.1em;
}

    .h1 > a {
        font: inherit;
        color: inherit;
    }

.h2 {
    font-size: 1.5em;
    font-weight: normal;
    margin: 1.5em 0 0.5em;
}

.container {
    box-sizing: border-box;
    padding: var(--common-padding);
    min-width: var(--min-width);
    max-width: var(--optimal-line-width);
    margin: 0 auto;
}


.hidden {
    display: none;
}

/* flex tools */

.flex {
    display: flex;
    /* this is basically row */
}

    .flex__cell {
        flex: 1;
    }

        .flex__cell--just-enough {
            flex-basis: auto;
            flex-grow: 0;
        }

        .flex__cell--half {
            /* This will make sure, that flex element won't push over less rich elements */
            flex-basis: 50%;
        }

        .flex__cell--third {
            flex-basis: 33.33%;
        }

        .flex__cell--gap-left {
            padding-left: 20px;
        }

.img {
    max-width: 100%;
    height: auto;
}
    .img--home {
        width: 100px;
    }

        @media only screen and (max-width: 479px) {
            .img--home {
                width: 33px;
            }
        }

    .img--round {
        border-radius: 50%;
    }

/* common class transforming list links into link row*/

.list {
    /*root block*/
}

    .list--horizontal {
        margin: 0;
        padding: 0;
        list-style: none;
    }

        .list--horizontal > li {
            display: inline-block;
            padding-right: 10px;
        }

        .list--right-aligned > li {
            padding-right: 0;
            padding-left: 10px;
        }


header {
    border-bottom: 4px solid var(--primary-color);
    margin-bottom: 1em;
}

    .header-links {
        padding: var(--common-padding);
        justify-content: space-between;
    }

        .header-links__home {
            color: var(--primary-color);
            font-weight: bold;
        }

            .header-links__home > h1 {
                font: inherit;
                margin: inherit;
            }

        /* extends .list .list--horizontal */
        .toolbar {
            font-size: var(--meta-font-size);
            color: var(--primary-color);
        }


footer {
    text-align: center;
    color: var(--primary-color);
    padding: 1em 0;
    font-size: var(--meta-font-size);
    font-family: var(--secondary-font-family);
}



.meta {
    font-size: var(--meta-font-size);
    font-family: var(--secondary-font-family);
    margin-top: 0;
    margin-bottom: 3em;
    color: #888;
}

/* extends .list .list--horizontal */
.taglist {
    font-size: var(--meta-font-size);
    padding: 1.5em 0 0;
}
    .taglist > li {
        background-color: var(--primary-color);
        padding: 3px 6px;
        margin-bottom: 3px;
        text-align: center;
    }

    .taglist > li > a {
        color: #fff;
    }


.article-item + .article-item {
    margin-top: 3em;
}

.compact {
    /* root block - modifier layer for article listing */
}

    .compact .h1 {
        margin-top: 0;
    }

    .compact .h2 {
        margin-top: 0em;
    }

    .compact .h2 + p {
        margin-top: 0;
    }

    .compact .meta {
        margin-bottom: 2em;
    }

    .compact .taglist {
        padding-top: 0;
    }

/* extends .list .list--horizontal */
.pager {
    margin-top: 3em;
	text-align: center;
    font-size: var(--meta-font-size);
}
    .pager > li > a {
        color: var(--primary-color);
        display: inline-block;
        padding: 3px 6px;
        text-decoration: none;
        border: 1px solid currentColor;	
        opacity: .75;
	}

    .pager > li > a:hover { 
        opacity: 1;
        color: var(--primary-font-color);
    }

/* forms */

.btn {
    padding: 3px 6px;
    display: inline-block;
    color: inherit;
}

    .btn--primary {
        background-color: var(--primary-color);
        color: #fff;
    }

    .btn--secondary {
        background-color: var(--secondary-color);
        color: #fff;
    }

.label {
    display: block;
    font-weight: bold;
    font-family: var(--secondary-font-family);
    font-size: var(--meta-font-size);
    margin: 1em 0 0.25em;
}

